force-app/main/default/objects/RE_Properties__c/RE_Properties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contain Resource Engine related configuration properties</description>
    <label>RE Properties</label>
</CustomObject>