force-app/main/default/objects/RE_Properties__c/fields/PropertyName__c.field-meta.xml
<CustomField>
    <fullName>PropertyName__c</fullName>
    <description>Property Name</description>
    <label>Property Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>