force-app/main/default/objects/RE_Properties__c/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <defaultValue>&quot;Text&quot;</defaultValue>
    <description>Property Data Type such as text, number,date</description>
    <inlineHelpText>Property Data Type such as text, number,date</inlineHelpText>
    <label>Property Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>