force-app/main/default/objects/RE_Properties__c/fields/PropertyValue__c.field-meta.xml
<CustomField>
    <fullName>PropertyValue__c</fullName>
    <description>Property Value</description>
    <label>Property Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>